fix: add margin-top to view-all and seperator components for improved spacing Close #14

--- a/portfolio/src/app/shared/components/seperator/seperator.component.scss
+++ b/portfolio/src/app/shared/components/seperator/seperator.component.scss
@@ -3,6 +3,7 @@
   align-items: center;
   justify-content: space-between;
   padding: 1rem 0;
+  margin-top: 2rem;
 
   .title-container {
     display: flex;
